# Render

./: .gitignore  README.md
Lecture/: Lec2  Lec2.c  image.ppm  lec  lecture1  lecture1.c  lecture1.c~
NOTES/: BoundingVol.md  Diffuse Materials.md  Ray-Plane Intersection.md  Refraction.md  Textures.md
Project/: CMakeLists.txt  chess.hdr  image.ppm  output.hdr
Project/src/: aabb.h  bvh.h  camera.h  camera.h~  color.h  hittable.h  hittable_list.h  interval.h  main.cc  main.cc~  material.h  mesh_import.h  onb.h  pdf.h  perlin.h  post_process.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  sphere.h~  texture.h  thread_pool.h  vec3.h  vec3.h~
Project/src/Textures/CubeMaps/gum_trees_1k_cubemap/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
Project/src/Textures/meshes/: Flint2.mtl  chess2.mtl  model 2.mtl  table2.mtl  turntable.mtl
Project/src/Textures/meshes/LowPolySodaPack/: sodacandisplay.mtl
